@@ -45,6 +45,9 @@ if ENABLE_JIM
 SUBDIRS += jim
 endif
 
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = urjtag.pc
+
 lib_LTLIBRARIES = liburjtag.la
 liburjtag_la_LDFLAGS = -version-info 0:0:0
 
